compiler/testData/diagnostics/tests/jvm/duplicateJvmSignature/specialNames/dataClassCopy.kt
// RUN_PIPELINE_TILL: BACKEND
// DIAGNOSTICS: -UNUSED_PARAMETER

<!CONFLICTING_JVM_DECLARATIONS!>data class C(val c: Int) {
    <!CONFLICTING_JVM_DECLARATIONS!>fun `copy$default`(c: C, x: Int, m: Int, mh: Any) = C(this.c)<!>
}<!>

/* GENERATED_FIR_TAGS: classDeclaration, data, functionDeclaration, primaryConstructor, propertyDeclaration,
thisExpression */
